test/files/neg/t7340a/Test_2.scala
object C extends App {
  type Greeter = {
    def hello(): Unit
  }
  val g: Greeter = new B
  g.hello()
}